--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-notion-client==2.0.0
-python-dotenv==1.0.0
-fastapi==0.109.2
-uvicorn==0.27.1
-pydantic==2.6.1
 aiofiles==23.2.1 
+notion-client==2.0.0
+openai==1.74.0
+pydantic==2.6.1
+python-dotenv==1.0.0
